--- a/index.html
+++ b/index.html
@@ -8,18 +8,12 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <script src='https://www.appadhoc.com/downloads/web/adhoc.min.js'></script>
+    <!-- adhoc sdk -->
+    <script src=https://appadhoc.com/downloads/web/adhocbuilder.min.js></script>
     <script>
-  (function() {
-  	var ad = document.createElement("script");
-  	ad.src = "//h5.appadhoc.com/static/js/adhoc.router.js?v=" + new Date().getTime();
-  	ad.onload = function(){
-  	   __adhoc__.init('ADHOC_297aa66f-7c27-427f-997f-886e31b82e96');
-  	}
-  	var s = document.getElementsByTagName("script")[0];
-  	s.parentNode.insertBefore(ad, s);
-  })();
-  </script>
+    __adhoc__.init('ADHOC_297aa66f-7c27-427f-997f-886e31b82e96');
+    </script>
+    <!-- adhoc sdk end -->
   </head>
   <body>
     <section class="page-header">
