--- a/m/index.html
+++ b/m/index.html
@@ -16,7 +16,8 @@
   </body>
   <script>
   m.render(document.body, m("ul", [
-      m("li", m("a[href='render.html']", 'render'))
+      m("li", m("a[href='render.html']", 'render')),
+      m("li", m("a[href='loop.html']", 'loop'))
   ]));
   </script>
 </html>
